# scorem-ipsum

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  sanity.py  scorem_sanity.py
.github/workflows/: python-app.yml
scorem/: data.py  game.py  scorem.py  util.py
scoremipsum/: __init__.py  demo.py  game.py  generation.py  ops.py  schedule.py  score.py  scoremipsum.py  util.py
scoremipsum/util/: conversion.py  support.py  team.py
tests/: test_pt_scorem.py  test_scorem.py  test_ut_scorem.py
util/: conversion.py  scheduler.py  support.py
